--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
-    <a href="./styles/style.css" rel="stylesheet" type="text/css">
+    <link href="./styles/style.css" rel="stylesheet" type="text/css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,10 +21,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Media showcase</title>
+    <title>News showcase</title>
   </head>
-  <body style="background: gray url(../images/background_01.jpg) no-repeat fixed left top !important;
-  background-size: cover;">
+  <body style="background: gray url(../images/background_01.jpg) no-repeat fixed left top !important;">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
